add world map and fix contrast on ui

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary: #4D1653;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
